[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthsearch"
version = "0.1.0"
authors = [
    { name = "Andrew Ryan", email = "andrewryan@duck.com" }
]
description = "A library for efficient indexing & similarity search of satellite images."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = ["earthsearch"]

[project.scripts]
earthsearch = "earthsearch.cli:main"
